@@ -1,8 +1,15 @@
+2017-10-22 : IsoformSwitchAnalyzeR v0.99.14
+    - isoformSwitchTestDRIMSeq() was updated to per default use dmFilter()
+    - Small updates to documentation better explaining the functionalities from udate 0.99.12
+
+2017-10-19 : IsoformSwitchAnalyzeR v0.99.13
+    - Version bump for Bioconductor to keep up
+
 2017-10-12 : IsoformSwitchAnalyzeR v0.99.12
     - importIsoformExpression() have been completely redesigned to utilize the tximport package as well as implementing the option for inter-library normalization of abundance (TxPM) values.
     - The vignette got a thorough workover - huge shoutout to Maria Dalby for the help!
     - isoformSwitchTestDRIMSeq() was extended to also include the dmFilter() functionality as part of the workflow.
-    - The internal process calculating gene expression from isoform expression was cast as its own function isoformToGeneExp.
+    - The internal process calculating gene expression from isoform expression was cast as its own function: isoformToGeneExp().
     - Fixed an error that could cause problems when importing CDSs from a GTF file
     - Updated descriptions and other minor style issues.
 
